# DLLForward

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
include/: builder.hh  encoding.hh  forwarder.hh  parser.hh
include/boilerplate/: bottom.inl  top.inl
include/headerboilerplate/: bottom.inl  top.inl
src/: builder.cc  encoding.cc  forwarder.cc  main.cc  parser.cc
